--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My First Web Page</title>
 </head>
 <body>
-<h1>Tihs is a Heading</h1>
+<h1>This is a Heading</h1>
 <p>test1<br/>test2</p>
 </body>
 </html>
